2-Challenge/nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: {이름을 입력하세요.}
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        {노드를 지정해주세요.}      
      containers:
      - name: nginx
        image: {nginx 최신 이미지를 입력하세요}
        ports:
        - containerPort: 80
