2-Challenge/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: {타입을 입력하세요.} 
  selector:
    {라벨을 입력하세요.}
  ports:
    - protocol: TCP
      port: {포트를 입력하세요.}           # 클러스터 내부에서 사용하는 포트
      targetPort: {포트를 입력하세요.}     # 컨테이너의 포트
      nodePort: {포트를 입력하세요.}     # 노드의 포트를 직접 지정 (30000-32767 사이)
